--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         
         <div class="section__one">
           <i class="fa-solid fa-globe"></i>
-          <p class="short__desc text__medium">онлайн-курс</p>
+          <p class="short__desc text__medium distance">онлайн-курс</p>
           <i class="fa-regular fa-clock"></i>
-          <p class="short__desc text__medium">18 Часов</p>
+          <p class="short__desc text__medium distance">18 Часов</p>
           <i class="fa-solid fa-calendar-days"></i>
-          <p class="short__desc text__medium">8 сентября</p>
+          <p class="short__desc text__medium distance">8 сентября</p>
         </div>
 
         <div class="section__two disp_space_btw ">
@@ -236,7 +236,7 @@
             <h1 class="title__medium">Что узнаем</h1>
           </div>
 
-          <div class="feature_list">
+          <div class="feature_list list_git padding">
             <ul class="text__medium">
               <li>Кто чем занят в съёмочной группе;</li>
               <li>На какие этапы делится кинопроизводство;</li>
