--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
 
     <header>
       <section>
-      <div class="fix_size_wide__wrap">
+        <div class="fix_size_wide__wrap">
 
-        <div class="logo">
+          <div class="logo">
 
-          <img src="./img/logo_mobile_black 1.png" class="logo" alt="">
+            <img src="./img/logo_mobile_black 1.png" class="logo" alt="">
+          </div>
+
         </div>
-
-      </div>
-    </section>
+      </section>
     </header>
 
     <main>
 
       <div class="fix_size_wide__wrap">
 
-        
+
         <div class="section__one">
           <i class="fa-solid fa-globe"></i>
           <p class="short__desc text__medium distance">онлайн-курс</p>
@@ -66,7 +66,15 @@
 
         <div class="section__three">
 
-          <img src="./img/Group 24.png" class="quote" alt="">
+          <div class="citation ">
+            <article>
+              <p class="citation_text title__small">
+                Зритель для меня
+                не потребитель моей продукции, не судья, а соучастник творчества, соавтор.
+              </p>
+              <p class="text__medium citation_autor"> Андрей Тарковский</p>
+            </article>
+          </div>
 
         </div>
 
