--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <h1 class="title__medium">Что узнаем</h1>
           </div>
 
-          <div class="feature_list list_git padding">
+          <div class="feature_list list_padding">
             <ul class="text__medium">
               <li>Кто чем занят в съёмочной группе;</li>
               <li>На какие этапы делится кинопроизводство;</li>
@@ -352,8 +352,11 @@
               </div>
               <div class="row">
                 <h5 class="title__small row__rules">1. Как создают кино</h5>
-                <p class="text__small row__rules">8 сентября 20:00
-                  Данила Кузнецов</p>
+                <div class="row__rules">
+                <p class="text__small">8 сентября 20:00
+                  </p>
+                  <p class="text__small">Данила Кузнецов</p>
+                </div>
               </div>
             </div>
 
@@ -479,19 +482,19 @@
 
 
               <div class="cont_number">
-                <i class="fa-duotone fa-phone"></i>
+                <img src="./img/phone_white.png" alt="phone number">
 
-                <p class="text__info">+7 (499) 39-146-39</p>
+                <p class="text__small info">+7 (499) 39-146-39</p>
               </div>
 
 
               <div class="email">
                 <i class="fa-regular fa-envelope"></i>
-                <p class="text_info">hello@synchronize.ru</p>
+                <p class="text__small info">hello@synchronize.ru</p>
               </div>
 
               <div class="copyright_two">
-                <p class="text__small ">
+                <p class="text__small">
 
                   © Синхронизация, 2020
                 </p>
